# a2a-settlement-mediator

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  environment.yml  mediator.db  pyproject.toml
a2a_settlement_mediator/: __init__.py  __main__.py  arbitration_prompts.py  config.py  evidence.py  heartbeat.py  mediator.py  merkle.py  prompts.py  provenance.py  schemas.py  settlement_pipeline.py  storage.py  tsa_client.py  webhook_listener.py  worm_schemas.py
examples/: programmatic_mediation.py
tests/: test_grounding_evaluation.py  test_heartbeat.py  test_mediator.py  test_provenance.py  test_settlement_pipeline.py
