[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-settlement-mediator"
version = "0.1.0"
description = "AI-powered dispute resolution and SEC 17a-4 WORM-compliant settlement for the A2A Settlement Exchange."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "a2a-settlement" },
]
keywords = ["a2a", "settlement", "escrow", "dispute", "mediation", "ai", "agents", "worm", "sec-17a-4", "rfc3161", "merkle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "litellm>=1.40",
    "fastapi>=0.110",
    "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/a2a-settlement/a2a-settlement-mediator"
Repository = "https://github.com/a2a-settlement/a2a-settlement-mediator"
Issues = "https://github.com/a2a-settlement/a2a-settlement-mediator/issues"

[project.scripts]
a2a-mediator = "a2a_settlement_mediator.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
